# slicer-wgpu

./: .gitignore  README.md  pyproject.toml  requirements.txt
slicer_wgpu/: __init__.py  mrml_bridge.py  scene_renderer.py  shadows.py  volume_renderer.py
slicer_wgpu/demos/: __init__.py  single_volume.py
slicer_wgpu/displayers/: __init__.py  base.py  fiducial.py  transform.py  volume.py
slicer_wgpu/fields/: __init__.py  base.py  fiducial.py  image.py  transform.py
