[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slicer-wgpu"
version = "0.1.0"
description = "WebGPU-backed rendering for 3D Slicer via pygfx"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Steve Pieper", email = "pieper@isomics.com" },
]
keywords = ["slicer", "wgpu", "pygfx", "volume-rendering", "medical-imaging"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "numpy",
  "wgpu",
  "pygfx",
  # rendercanvas needs PythonQt support; install the fork until the PR lands:
  #   pip install https://github.com/pieper/rendercanvas/archive/refs/heads/main.zip
  # Declared loosely here so pip doesn't clobber a pre-installed patched build.
  "rendercanvas",
]

[project.urls]
Homepage = "https://github.com/pieper/slicer-wgpu"
Repository = "https://github.com/pieper/slicer-wgpu"

[tool.setuptools.packages.find]
include = ["slicer_wgpu*"]
